1. Changed the operation of "terminate" to "terminate and purge" to let users to delete useless jobs. 2. Fixed and disabled test cases.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,8 @@ server.servlet.context-path=/dashboard
 server.servlet.application-display-name=Dashboard
 
 #security.basic.enabled=false
-base.url=http://wlguatrosiapp01.natlib.govt.nz:${server.port}${server.servlet.context-path}
-#base.url=http://localhost:8080/dashboard
+#base.url=http://wlguatrosiapp01.natlib.govt.nz:${server.port}${server.servlet.context-path}
+base.url=http://localhost:${server.port}${server.servlet.context-path}
 
 # Spring MVC configuration
 spring.mvc.view.prefix=/
@@ -30,7 +30,6 @@ ProcessSetting.ScanInterval=3600
 #Ontimer tasks configuration of Deposit Jobs. ScanInterval, Second; Active, MaxStorage: Day
 DepositJob.ScanInterval=60
 
-
 ## Logging configuration
 # For more details see https://docs.spring.io/spring-boot/docs/current/reference/html/boot-features-logging.html
 # Note that Spring takes logging.dir and puts its value into LOG_PATH, which is used in the logback-spring.xml configuration file.
@@ -39,7 +38,7 @@ logging.path=/exlibris/dps/nlnz_tools/dashboard/logs/
 # The root logger can be configured by using logging.level.root
 logging.level.root=ERROR
 logging.level.nz.govt.natlib.dashboard=DEBUG
-logging.level.nz.govt.natlib.dashboard.common.auth=INFO
+logging.level.nz.govt.natlib.dashboard.common.auth=WARN
 logging.level.org.springframework=ERROR
 logging.level.org.springframework.boot.autoconfigure=ERROR
 logging.level.org.springframework.security=ERROR
