--- a/build.gradle
+++ b/build.gradle
@@ -56,7 +56,7 @@ dependencies {
     implementation group: 'jaxen', name: 'jaxen', version: '1.2.0'
     implementation group: 'commons-net', name: 'commons-net', version: '3.7'
     implementation 'org.apache.commons:commons-lang3:3.11'
-    implementation  group: 'com.sleepycat', name: 'je', version: '18.3.12'
+//    implementation  group: 'com.sleepycat', name: 'je', version: '18.3.12'
     implementation group: 'oro', name: 'oro', version: '2.0.8'
     implementation group: 'com.splunk.logging', name: 'splunk-library-javalogging', version: '1.8.0'
 
