--- a/build.gradle
+++ b/build.gradle
@@ -64,16 +64,21 @@ test {
 //    standardInput = System.in
 //}
 
-group = 'dashboard'
-version = '1.0.0-SNAPSHOT'
+group = 'deposit-dashboard'
+version = '1.2.0-SNAPSHOT'
 description = 'Dashboard Tool'
 sourceCompatibility = '1.11'
 targetCompatibility = '1.11'
 apply plugin: 'war'
 
-bootWar {
-    baseName = 'dashboard'
-    archiveName='dashboard.war'
+//For a Spring Boot War
+//bootWar {
+//    archiveFileName = 'deposit-dashboard-full.war'
+//}
+
+//For a plain war
+war {
+    archiveFileName = 'deposit-dashboard.war'
 }
 
 task sourcesJar(type: Jar) {
