--- a/conf/application.properties
+++ b/conf/application.properties
@@ -1,18 +1,19 @@
 # For directory dividers you must use \\ or / instead of \
-server.port=7070
-server.servlet.context-path=/dashboard
+server.port=1901
+server.servlet.context-path=/deposit-dashboard
 server.servlet.application-display-name=Dashboard
-#security.basic.enabled=false
 
-base.url=http://localhost:${server.port}${server.servlet.context-path}
+#security.basic.enabled=false
+base.url=http://wlguatrosiapp01.natlib.govt.nz:${server.port}${server.servlet.context-path}
+#base.url=http://localhost:${server.port}${server.servlet.context-path}
 
 # Spring MVC configuration
 spring.mvc.view.prefix=/
 spring.mvc.view.suffix=.html
-#system.storage.path=C:/Users/leefr/workspace/data
-system.storage.path=data
+system.storage.path=/exlibris/dps/nlnz_tools/dashboard/running_data
+#system.storage.path=data
 
-ProxyEnable=true
+ProxyEnable=false
 ProxyHost=192.168.1.4
 ProxyPort=3082
 
@@ -26,20 +27,18 @@ Rosetta.DeliveryAccessWsdlUrl=https://wlguatdpsilb.natlib.govt.nz/dpsws/delivery
 
 #Unit: Second
 ProcessSetting.ScanInterval=3600
-
 #Ontimer tasks configuration of Deposit Jobs. ScanInterval, Second; Active, MaxStorage: Day
 DepositJob.ScanInterval=60
 
 ## Logging configuration
 # For more details see https://docs.spring.io/spring-boot/docs/current/reference/html/boot-features-logging.html
 # Note that Spring takes logging.dir and puts its value into LOG_PATH, which is used in the logback-spring.xml configuration file.
-logging.path=logs/
+logging.path=/exlibris/dps/nlnz_tools/dashboard/logs/
 # logging.level.<logger-name>=<level> where level is one of TRACE, DEBUG, INFO, WARN, ERROR, FATAL, or OFF.
 # The root logger can be configured by using logging.level.root
 logging.level.root=ERROR
 logging.level.nz.govt.natlib.dashboard=DEBUG
+logging.level.nz.govt.natlib.dashboard.common.auth=WARN
 logging.level.org.springframework=ERROR
 logging.level.org.springframework.boot.autoconfigure=ERROR
 logging.level.org.springframework.security=ERROR
-#debug=false
-
