--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,13 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-tomcat'
     implementation 'org.springframework.boot:spring-boot-starter-freemarker'
+    implementation ('org.springframework:spring-context'){
+        exclude group: 'commons-logging', module: 'commons-logging'
+    }
+
     implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
+//    implementation 'org.slf4j:slf4j-api:1.7.36'
+    implementation 'org.slf4j:jcl-over-slf4j:1.7.30'
 
     // This dependency is used by the application.
     implementation 'com.google.guava:guava:28.2-jre'
