--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # For directory dividers you must use \\ or / instead of \
-server.port=1801
+server.port=1901
 server.servlet.context-path=/deposit-dashboard
 server.servlet.application-display-name=Dashboard
 
@@ -36,7 +36,7 @@ DepositJob.ScanInterval=60
 logging.path=/exlibris/dps/nlnz_tools/dashboard/logs/
 # logging.level.<logger-name>=<level> where level is one of TRACE, DEBUG, INFO, WARN, ERROR, FATAL, or OFF.
 # The root logger can be configured by using logging.level.root
-logging.level.root=ERROR
+logging.level.root=WARN
 logging.level.nz.govt.natlib.dashboard=DEBUG
 logging.level.nz.govt.natlib.dashboard.common.auth=WARN
 logging.level.org.springframework=ERROR
