--- a/build.gradle
+++ b/build.gradle
@@ -72,10 +72,10 @@ test {
 //}
 
 group = 'deposit-dashboard'
-version = '1.2.2-SNAPSHOT'
+version = '1.2.4.1'
 description = 'Dashboard Tool'
-sourceCompatibility = '1.17'
-targetCompatibility = '1.17'
+sourceCompatibility = '1.11'
+targetCompatibility = '1.11'
 //apply plugin: 'war'
 
 //For a Spring Boot War
