Added the new function to backup sidecar files

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -42,3 +42,5 @@ logging.level.nz.govt.natlib.dashboard.common.auth=WARN
 logging.level.org.springframework=ERROR
 logging.level.org.springframework.boot.autoconfigure=ERROR
 logging.level.org.springframework.security=ERROR
+
+TestEnabled=false
