Refactored the project to maven

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,8 @@ server.port=1901
 server.servlet.context-path=/deposit-dashboard
 server.servlet.application-display-name=Dashboard
 
+spring.main.allow-circular-references=true
+
 #security.basic.enabled=false
 base.url=http://wlguatrosiapp01.natlib.govt.nz:${server.port}${server.servlet.context-path}
 #base.url=http://localhost:${server.port}${server.servlet.context-path}
