--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
 	<artifactId>dashboard</artifactId>
 	<version>2.0.0-SNAPSHOT</version>
 	<name>deposit-dashboard</name>
+	<packaging>war</packaging>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>11</java.version>
