--- a/apps/conf/application.properties
+++ b/apps/conf/application.properties
@@ -3,6 +3,8 @@ server.port=1901
 server.servlet.context-path=/deposit-dashboard
 server.servlet.application-display-name=Dashboard
 
+spring.main.allow-circular-references=true
+
 #security.basic.enabled=false
 base.url=http://wlguatrosiapp01.natlib.govt.nz:${server.port}${server.servlet.context-path}
 #base.url=http://localhost:${server.port}${server.servlet.context-path}
@@ -36,9 +38,11 @@ DepositJob.ScanInterval=60
 logging.path=/exlibris/dps/nlnz_tools/dashboard/logs/
 # logging.level.<logger-name>=<level> where level is one of TRACE, DEBUG, INFO, WARN, ERROR, FATAL, or OFF.
 # The root logger can be configured by using logging.level.root
-logging.level.root=ERROR
+logging.level.root=WARN
 logging.level.nz.govt.natlib.dashboard=DEBUG
 logging.level.nz.govt.natlib.dashboard.common.auth=WARN
 logging.level.org.springframework=ERROR
 logging.level.org.springframework.boot.autoconfigure=ERROR
 logging.level.org.springframework.security=ERROR
+
+TestEnabled=false
