--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,8 +36,8 @@ DepositJob.ScanInterval=60
 logging.path=/exlibris/dps/nlnz_tools/dashboard/logs/
 # logging.level.<logger-name>=<level> where level is one of TRACE, DEBUG, INFO, WARN, ERROR, FATAL, or OFF.
 # The root logger can be configured by using logging.level.root
-logging.level.root=WARN
-logging.level.nz.govt.natlib.dashboard=DEBUG
+logging.level.root=INFO
+logging.level.nz.govt.natlib.dashboard=INFO
 logging.level.nz.govt.natlib.dashboard.common.auth=WARN
 logging.level.org.springframework=ERROR
 logging.level.org.springframework.boot.autoconfigure=ERROR
