--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,9 +36,10 @@ DepositJob.ScanInterval=60
 logging.path=/exlibris/dps/nlnz_tools/dashboard/logs/
 # logging.level.<logger-name>=<level> where level is one of TRACE, DEBUG, INFO, WARN, ERROR, FATAL, or OFF.
 # The root logger can be configured by using logging.level.root
-logging.level.root=INFO
-logging.level.nz.govt.natlib.dashboard=INFO
-logging.level.nz.govt.natlib.dashboard.common.auth=WARN
+logging.level.root=ERROR
+logging.level.nz.govt.natlib.dashboard.app.MainApplication=INFO
+logging.level.nz.govt.natlib.dashboard=ERROR
+logging.level.nz.govt.natlib.dashboard.common.auth=ERROR
 logging.level.org.springframework=ERROR
 logging.level.org.springframework.boot.autoconfigure=ERROR
 logging.level.org.springframework.security=ERROR
