--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,11 +19,7 @@ ProxyPort=3082
 
 User.Institution=INS00
 Rosetta.PDSUrl=https://slbpdstest.natlib.govt.nz/pds
-Rosetta.ProducerWsdlUrl=https://wlguatdpsilb.natlib.govt.nz/dpsws/deposit/ProducerWebServices?wsdl
-Rosetta.DepositWsdlUrl=https://wlguatdpsilb.natlib.govt.nz/dpsws/deposit/DepositWebServices?wsdl
-Rosetta.SipWsdlUrl=https://wlguatoprilb.natlib.govt.nz/dpsws/repository/SipWebServices?wsdl
-Rosetta.DPSSearchUrl=https://wlguatdpsilb.natlib.govt.nz/delivery/sru
-Rosetta.DeliveryAccessWsdlUrl=https://wlguatdpsilb.natlib.govt.nz/dpsws/delivery/DeliveryAccessWS?wsdl
+Rosetta.RestApiUrl=https://wlguatdpsilb.natlib.govt.nz/rest/v0
 
 #Unit: Second
 ProcessSetting.ScanInterval=3600
