--- a/build.gradle
+++ b/build.gradle
@@ -72,7 +72,7 @@ test {
 //}
 
 group = 'deposit-dashboard'
-version = '1.2.6.1-SNAPSHOT'
+version = '1.2.6.1'
 description = 'Dashboard Tool'
 sourceCompatibility = '1.11'
 targetCompatibility = '1.11'
