Adjusted the response and layout of dashboard

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,8 @@ ProxyHost=192.168.1.4
 ProxyPort=3082
 
 User.Institution=INS00
-Rosetta.PDSUrl=https://slbpdstest.natlib.govt.nz/pds
+# Rosetta.PDSUrl=https://slbpdstest.natlib.govt.nz/pds
+Rosetta.PDSUrl=https://slbpds.natlib.govt.nz/pds
 Rosetta.RestApiUrl=https://wlguatdpsilb.natlib.govt.nz/rest/v0
 
 #Unit: Second
