--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,13 +28,15 @@ ProcessSetting.ScanInterval=3600
 DepositJob.ScanInterval=60
 
 ## Logging configuration
+management.endpoints.web.exposure.include=health,info,loggers
+
 # For more details see https://docs.spring.io/spring-boot/docs/current/reference/html/boot-features-logging.html
 # Note that Spring takes logging.dir and puts its value into LOG_PATH, which is used in the logback-spring.xml configuration file.
 logging.path=/exlibris/dps/nlnz_tools/dashboard/logs/
 # logging.level.<logger-name>=<level> where level is one of TRACE, DEBUG, INFO, WARN, ERROR, FATAL, or OFF.
 # The root logger can be configured by using logging.level.root
 logging.level.root=ERROR
-logging.level.nz.govt.natlib.dashboard=DEBUG
+logging.level.nz.govt.natlib.dashboard=ERROR
 logging.level.nz.govt.natlib.dashboard.common.auth=ERROR
 logging.level.nz.govt.natlib.dashboard.app.MainApplication=INFO
 logging.level.org.springframework=ERROR
