--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # For directory dividers you must use \\ or / instead of \
 server.port=1901
-server.servlet.context-path=/deposit-dashboard
+server.servlet.context-path=/dd
 server.servlet.application-display-name=Dashboard
 
 #security.basic.enabled=false
