--- a/ui/package.json
+++ b/ui/package.json
@@ -16,6 +16,7 @@
     "dependencies": {
         "@primevue/themes": "^4.0.4",
         "chart.js": "3.3.2",
+        "file-saver": "^2.0.5",
         "pinia": "^2.1.7",
         "primeflex": "^3.3.1",
         "primeicons": "^7.0.0",
@@ -27,6 +28,7 @@
         "@primevue/auto-import-resolver": "^4.0.4",
         "@rushstack/eslint-patch": "^1.8.0",
         "@tsconfig/node20": "^20.1.2",
+        "@types/file-saver": "^2.0.7",
         "@types/jsdom": "^21.1.6",
         "@types/node": "^20.11.25",
         "@vitejs/plugin-vue": "^5.0.5",
