--- a/build.gradle
+++ b/build.gradle
@@ -105,18 +105,48 @@ tasks.register('testsJar', Jar) {
 //}
 //build.dependsOn war
 
-tasks.register('deleteUIFiles', Delete) {
+
+tasks.register('cleanUI', Delete) {
+    group = "UIBuild"
+    description = "Remove the dist folder and webapp folder"
     delete './ui/dist', './src/main/webapp/'
     followSymlinks = true
 }
 
-tasks.register('buildUI', Exec) {
+tasks.register('installUI', Exec) {
+    group = "UIBuild"
+    description = "Install the dependencies for UI"
     workingDir './ui'
     commandLine 'npm', 'install'
+}
+
+tasks.register('buildUI', Exec) {
+    group = "UIBuild"
+    description = "Run npm install and build-only"
+    dependsOn tasks.installUI
+    workingDir './ui'
     commandLine 'npm', 'run', 'build-only'
 }
 
-tasks.register('copyUIFiles', Copy) {
+tasks.register('copyUI', Copy) {
+    group = "UIBuild"
+    description = "Copy the files from dist folder to webapp folder"
+    dependsOn tasks.buildUI
     from './ui/dist'
     into './src/main/webapp'
+}
+
+tasks.register('buildAll') {
+    dependsOn tasks.copyUI
+//    dependsOn tasks.build
+    doLast {
+        print 'All done!'
+    }
+}
+
+clean {
+    dependsOn tasks.cleanUI
+}
+build {
+    dependsOn tasks.copyUI
 }
