--- a/ui/package.json
+++ b/ui/package.json
@@ -15,6 +15,7 @@
     },
     "dependencies": {
         "@primevue/themes": "^4.0.4",
+        "@vueuse/core": "^11.1.0",
         "chart.js": "3.3.2",
         "file-saver": "^2.0.5",
         "pinia": "^2.1.7",
