separated the address of sip api

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,7 +20,9 @@ ProxyPort=3082
 User.Institution=INS00
  Rosetta.PDSUrl=https://slbpdstest.natlib.govt.nz/pds
 #Rosetta.PDSUrl=https://slbpds.natlib.govt.nz/pds
-Rosetta.RestApiUrl=https://wlguatdpsilb.natlib.govt.nz/rest/v0
+Rosetta.RestApiDpsUrl=https://wlguatdpsilb.natlib.govt.nz/rest/v0
+Rosetta.RestApiSipUrl=https://wlguatoprilb.natlib.govt.nz/rest/v0
+
 
 #Unit: Second
 ProcessSetting.ScanInterval=3600
