--- a/build.gradle
+++ b/build.gradle
@@ -41,7 +41,7 @@ test {
 }
 
 group = 'deposit-dashboard'
-version = '2.0.0-rc4'
+version = '2.0.1'
 description = 'Dashboard Tool'
 sourceCompatibility = '1.11'
 targetCompatibility = '1.11'
