--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,6 +24,18 @@ Rosetta.RestApiDpsUrl=https://wlguatdpsilb.natlib.govt.nz/rest/v0
 Rosetta.RestApiSipUrl=https://wlguatoprilb.natlib.govt.nz/rest/v0
 
 
+# LDAP settings
+#####################################
+ldap.enable=false
+ldap.url=ldap://yourldapserver.domain.com:389/
+ldap.usrSearchBase=ou=people
+ldap.usrSearchFilter=(uid={0})
+ldap.groupSearchBase=ou=groups
+ldap.groupSearchFilter=(member={0})
+ldap.contextSource.root=dc=com
+ldap.contextSource.manager.dn=
+ldap.contextSource.managerPassword=
+
 #Unit: Second
 ProcessSetting.ScanInterval=3600
 #Ontimer tasks configuration of Deposit Jobs. ScanInterval, Second; Active, MaxStorage: Day
