fixed the issues 2

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+spring.profiles.active=dep
+
 # For directory dividers you must use \\ or / instead of \
 server.port=1901
 server.servlet.context-path=/deposit-dashboard
