--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@ gradle-app.setting
 # # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
 # gradle/wrapper/gradle-wrapper.properties
 src/main/resources/static/
+/**/application-dep.properties
