To supported the mvn and container

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,4 @@ gradle-app.setting
 # gradle/wrapper/gradle-wrapper.properties
 src/main/resources/static/
 /**/application-dep.properties
+target/
