added the debug stuff

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,8 @@
 services:
   dashboard:
-    image: localhost/deposit-dashboard
+    # image: localhost/deposit-dashboard
+    image: docker.io/maven:3.9.9-eclipse-temurin-17
+    command: sleep infinity
     container_name: dashboard
     hostname: dashboard
     restart: always
@@ -11,3 +13,4 @@ services:
     volumes:
       - /exlibris/dps/nlnz_tools/dashboard:/exlibris/dps/nlnz_tools/dashboard
       - /mnt/d/data:/mnt/d/data
+      - ./:/deposit-dashboard
