--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -59,4 +59,5 @@ logging.level.org.springframework=ERROR
 logging.level.org.springframework.boot.autoconfigure=ERROR
 logging.level.org.springframework.security=ERROR
 
-TestEnabled=false
+management.endpoints.web.exposure.include=env
+management.endpoint.env.show-values=always
