--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -43,8 +43,8 @@ MaxConcurrencyDepositNumber=5
 logging.path=logs/
 # logging.level.<logger-name>=<level> where level is one of TRACE, DEBUG, INFO, WARN, ERROR, FATAL, or OFF.
 # The root logger can be configured by using logging.level.root
-logging.level.root=ERROR
-logging.level.org.dashboard=DEBUG
+logging.level.root=INFO
+logging.level.org.dashboard=INFO
 logging.level.org.springframework=ERROR
 logging.level.org.springframework.boot.autoconfigure=ERROR
 
