--- a/server/.vscode/settings.json
+++ b/server/.vscode/settings.json
@@ -1,14 +1,9 @@
 {
-  "python.testing.pytestArgs": [
-    "tests"
-  ],
+  "python.testing.pytestArgs": ["."],
   "python.testing.unittestEnabled": false,
   "python.testing.pytestEnabled": true,
   "python.formatting.provider": "black",
-  "python.formatting.blackArgs": [
-    "--line-length",
-    "200"
-  ],
+  "python.formatting.blackArgs": ["--line-length", "200"],
   "sqlfluff.executablePath": "${workspaceFolder}/.venv/bin/sqlfluff",
   "sqlfluff.linter.diagnosticSeverity": "error",
   "sqlfluff.linter.diagnosticSeverityByRule": [
