--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ services:
   dashboard:
     image: localhost/deposit-dashboard
 #    image: docker.io/maven:3.9.9-eclipse-temurin-17
-    command: sleep infinity
+#    command: sleep infinity
     container_name: dashboard
     hostname: dashboard
     restart: always
