added the system info api

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,23 +5,15 @@ server.port=1901
 server.servlet.context-path=/deposit-dashboard
 server.servlet.application-display-name=Dashboard
 
-#security.basic.enabled=false
-base.url=http://wlguatrosiapp01.natlib.govt.nz:${server.port}${server.servlet.context-path}
-#base.url=http://localhost:${server.port}${server.servlet.context-path}
-
 # Spring MVC configuration
 spring.mvc.view.prefix=/
 spring.mvc.view.suffix=.html
 system.storage.path=/exlibris/dps/nlnz_tools/dashboard/running_data
 #system.storage.path=data
 
-ProxyEnable=false
-ProxyHost=192.168.1.4
-ProxyPort=3082
+system.deployment=DEV
 
 User.Institution=INS00
- Rosetta.PDSUrl=https://slbpdstest.natlib.govt.nz/pds
-#Rosetta.PDSUrl=https://slbpds.natlib.govt.nz/pds
 Rosetta.RestApiDpsUrl=https://wlguatdpsilb.natlib.govt.nz/rest/v0
 Rosetta.RestApiSipUrl=https://wlguatoprilb.natlib.govt.nz/rest/v0
 
@@ -58,3 +50,4 @@ logging.level.org.springframework.boot.autoconfigure=ERROR
 logging.level.org.springframework.security=ERROR
 
 TestEnabled=false
+
