--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -9,9 +9,7 @@ spring.mvc.view.suffix=.html
 
 system.storage.path=storage_test
 
-ProxyEnable=no
-ProxyHost=192.168.1.65
-ProxyPort=3082
+system.deployment=DEV
 
 User.Institution=INS00
 
