--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,7 @@ spring.mvc.view.suffix=.html
 system.storage.path=/exlibris/dps/nlnz_tools/dashboard/running_data
 #system.storage.path=data
 
+#The deployment environment: DEV, UAT or PRD
 system.deployment=DEV
 
 User.Institution=INS00
