recoverd the gradle

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,9 @@ system.storage.path=/exlibris/dps/nlnz_tools/dashboard/running_data
 #system.storage.path=data
 
 #The deployment environment: DEV, UAT or PRD
-system.deployment=DEV
+app.deployment=DEV
+app.version=@projectVersion@
+
 
 User.Institution=INS00
 Rosetta.RestApiDpsUrl=https://wlguatdpsilb.natlib.govt.nz/rest/v0
