fixed the upgrade issues

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+spring.main.allow-circular-references=true
 spring.profiles.active=dep
 
 # For directory dividers you must use \\ or / instead of \
@@ -13,8 +14,7 @@ system.storage.path=/exlibris/dps/nlnz_tools/dashboard/running_data
 
 #The deployment environment: DEV, UAT or PRD
 app.deployment=DEV
-app.version=@projectVersion@
-
+app.version=@app.version@
 
 User.Institution=INS00
 Rosetta.RestApiDpsUrl=https://wlguatdpsilb.natlib.govt.nz/rest/v0
