renamed the certs library name

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,11 +23,11 @@ stages:
     - task: DownloadSecureFile@1
       name: securityFile
       inputs:
-        secureFile: security-library.tar.gz
+        secureFile: certs.tar.gz
     - script: |
         mkdir -p $(Build.SourcesDirectory)/security
-        cp "$(securityFile.secureFilePath)" $(Build.SourcesDirectory)/security/security-library.tar.gz
-        tar -xzf $(Build.SourcesDirectory)/security/security-library.tar.gz -C $(Build.SourcesDirectory)/security
+        cp "$(securityFile.secureFilePath)" $(Build.SourcesDirectory)/security/certs.tar.gz
+        tar -xzf $(Build.SourcesDirectory)/security/certs.tar.gz -C $(Build.SourcesDirectory)/security
       displayName: 'Prepare security files'
     - task: Docker@2
       displayName: Build an image
