--- a/ui/package.json
+++ b/ui/package.json
@@ -41,6 +41,7 @@
         "autoprefixer": "^10.4.19",
         "eslint": "^8.57.0",
         "eslint-plugin-vue": "^9.23.0",
+        "playwright": "^1.58.0",
         "postcss": "^8.4.40",
         "prettier": "^3.2.5",
         "sass": "^1.55.0",
