refined the logs

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -47,7 +47,8 @@ logging.path=/exlibris/dps/nlnz_tools/dashboard/logs/
 # logging.level.<logger-name>=<level> where level is one of TRACE, DEBUG, INFO, WARN, ERROR, FATAL, or OFF.
 # The root logger can be configured by using logging.level.root
 logging.level.root=INFO
-logging.level.nz.govt.natlib.dashboard=INFO
+logging.level.nz.govt.natlib.dashboard=WARN
+logging.level.nz.govt.natlib.dashboard.app=INFO
 logging.level.org.springframework=ERROR
 logging.level.org.springframework.boot.autoconfigure=ERROR
 logging.level.org.springframework.security=ERROR
